Fix drop-shadow/image blur bleed in page intro

--- a/app/styles/components/_page-intro.scss
+++ b/app/styles/components/_page-intro.scss
@@ -4,6 +4,7 @@
 .page-intro {
   font-weight: 600;
   text-align: center;
+  overflow: hidden;
 }
 
 .intro-share {
@@ -117,6 +118,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    margin: -10px;
 
     background-position: center;
     background-repeat: no-repeat;
